# hello30

./: BUILD  Cargo.toml  MODULE.bazel  WORKSPACE  composer.json  docker-compose.yml  dockerfile
.github/workflows/: build-and-test.yaml  ci.yaml
missing-local-repo/: MODULE.bazel
missing-workspace-path/: MODULE.bazel
