# This bazel_dep should be detected as dependency confusion vulnerability
# because it's in a workspace file that gets scanned
bazel_dep(name = "workspace-missing-package", version = "1.0")
bazel_dep(name = "nested-fake-dependency", version = "2.0")

# Test Maven artifacts in nested workspace
maven_install(
    artifacts = [
        "com.workspace:missing-nested-artifact:1.0"
    ]
)

# Test GitHub repo jacking - this should go to GitHub_Repo_Jacking.txt
git_repository(
    name = "test_nested_repo",
    remote = "https://github.com/fake-nested-org/missing-nested-repo.git",
    commit = "abc123"
)

# Another GitHub reference for testing
http_archive(
    name = "another_test",
    url = "https://github.com/nonexistent-org-test/fake-archive-repo/archive/v1.0.tar.gz"
)
